# clinique-elita

./: .gitignore  create_example_data.py  debug_disappearing.py  pyproject.toml  requirements.txt  runtime.txt  test_full_images.py  vercel.json  vercel_app.py  vercel_setup.py
clinique_elita/: db.sqlite3  manage.py  requirements.txt  settings.py  urls.py  wsgi.py
clinique_elita/clinique_elita/: asgi.py  settings.py  urls.py  wsgi.py
clinique_elita/main/: forms.py  models.py
clinique_elita/main/migrations/: 0001_initial.py  0002_appointment_tracking_id.py
clinique_elita/main/templates/: 500.html  about.html  animal_profiles.html  cart.html  checkout.html  home.html  my_orders.html  product_detail.html  profile.html  register.html  services.html  shop.html
main/: admin.py  context_processors.py  models.py  signals.py  views.py
main/migrations/: 0003_populate_tracking_ids.py  0004_order_delivery_type_alter_order_status_and_more.py  0005_alter_category_image_alter_product_image.py  0006_testimonial.py  0007_alter_order_wilaya.py
main/static/data/: algeria_communes.json
main/templates/: 404.html  appointments.html  base.html  cart.html  contact.html  edit_animal_profile.html  home.html  login.html  order_tracking.html  product_detail.html  shop.html  track_appointment.html
main/templates/admin/: admin_animal_profiles.html  admin_appointments.html  admin_base.html  admin_categories.html  admin_contact_messages.html  admin_customer_detail.html  admin_customers.html  admin_dashboard.html  (+9 more)
main/templatetags/: media_extras.py
main/utils/: media.py
(+9 files in other folders)
