[project]
name = "clinique-elita"
version = "1.0.0"
description = "Clinique Elita - Veterinary clinic Django app"
dependencies = [
    "Django>=4.2,<5.0",
    "gunicorn>=21.0",
    "whitenoise>=6.0",
    "dj-database-url>=0.5,<3.0",
    "psycopg2-binary>=2.9",
    "Pillow>=10.0",
]

[tool.setuptools]
packages = ["clinique_elita", "main"]

[tool.vercel]
entrypoint = "clinique_elita.wsgi:application"
runtime = "python3.12"

[tool.vercel.scripts]
build = "python manage.py collectstatic --noinput && python manage.py migrate --noinput"
